force-app/main/default/objects/Portal_Package_Extension__mdt/Portal_Package_Extension__mdt.object-meta.xml
<CustomObject>
    <label>Portal Package Extension</label>
    <pluralLabel>Portal Package Extensions</pluralLabel>
</CustomObject>