force-app/main/default/objects/Portal_Package_Extension__mdt/fields/Override_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Override_Class_Name__c</fullName>
    <label>Override Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>