force-app/main/default/objects/Portal_Package_Extension__mdt/fields/Override_Class_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Override_Class_Namespace__c</fullName>
    <label>Override Class Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>